# test_task

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/curves/: CMakeLists.txt  Circle.cpp  Circle.h  Curve.cpp  Curve.h  Ellipse.cpp  Ellipse.h  Helix.cpp  Helix.h
src/demo_app/: CMakeLists.txt  Demo.cpp  Demo.h  Utils.h  main.cpp
